[package]
name = "historical_market_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.20.0", features = [ "full" ]}
chrono = "*"
yahoo-finance = { version = "*", path = "./yahoo-finance-rs"}
futures = "*"
clap = { version = "*", features = ["derive"] }
anyhow = "*"
#influxdb2_client = { version = "*", git = "https://github.com/influxdata/influxdb_iox.git" }
influxdb2 = "*"
influxdb2-structmap = "*"
influxdb2-structmap-derive ="*"


