[package]
name = "historical_market_database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.20.0", features = [ "full" ]}
chrono = "*"
yahoo-finance = { version = "*", path = "./yahoo-finance-rs"}
futures = "*"
clap = { version = "*", features = ["derive"] }
anyhow = "*"
influxdb = { version = "*", path = "../influxdb-rust/influxdb", features = ["derive", "use-serde", "curl-client"]}
serde = "*"
serde_json = "*"
rayon = "*"